--- a/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
+++ b/src/components/front/front-edu/pages/elem-edu-dsr2024cpp.html
@@ -33,5 +33,6 @@
   <p><a href="lec-8.html" class="js-dsr-lecture">Лекция 8 (18.11.2024)</a></p>
   <p><a href="lec-9.html" class="js-dsr-lecture">Лекция 9 (9.12.2024)</a></p>
   <p><a href="lec-10.html" class="js-dsr-lecture">Лекция 10 (16.12.2024)</a></p>
+  <p><a href="lec-11.html" class="js-dsr-lecture">Лекция 11 (23.12.2024)</a></p>
 </article>
 
