--- a/src/components/alg/alg-conspect/sp/pages/elem-sp8.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp8.html
@@ -13,7 +13,9 @@
 <article class="article">
   <h2>Содержание</h2>
 
-  <p><a href="#p1">Префикс-функция</a></p>
+  <p><a href="#p">Префикс-функция</a></p>
+  <p><a href="#t1">Задача 1. Найти сумму от l до r</a></p>
+  <p><a href="#t2">Задача 2. Найти сумму в матрице</a></p>
   <p><a href="#task1">Задача A. Трудная задача</a></p>
   <p><a href="#task2">Задача B. Интервалы</a></p>
   <p><a href="#task3">Задача C. Сумма чисел в массиве</a></p>
@@ -33,9 +35,254 @@
 
 <!-- Префикс-функция -->
 <article class="article">
-  <div class="anchor" id="p1"></div>
+  <div class="anchor" id="p"></div>
   <h3>Префикс-функция</h3>
 
+  <p>К базовым алгоритмам мы относим</p>
+  <ol>
+    <li>Префикс-функция</li>
+    <li>Два указателя</li>
+    <li>Бинарный поиск</li>
+    <li>Сортировка слиянием</li>
+    <li>Битовые операции</li>
+  </ol>
+
+  <p>На базовом алгоритме <strong>префикс-функции</strong> основан сложный алгоритм <strong>КМП (Кнута - Морриса - Пратта)</strong></p>
+  <p>Простым вариантом <strong>префикс-функции</strong> является массив префиксных сумм</p>
+  <p>Усложненным вариантом <strong>префикс-функции</strong> является матрица префиксных сумм</p>
+</article>
+
+
+<!-- Задача 1. Найти сумму от l до r -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>Задача 1. Найти сумму от l до r</h3>
+
+  <p>Дан целочисленный массив A длины n. Необходимо найти сумму элементов массива с позиции l до позиции r</p>
+  <code>A = {a<sub>1</sub>, a<sub>2</sub>, ... , a<sub>n-1</sub>, a<sub>n</sub>}</code>
+  <code>result = a<sub>l</sub> + a<sub>l+1</sub> + ... + a<sub>r-1</sub> + a<sub>r</sub></code>
+
+  <p>Если запрос единственный, то мы можем посчитать сумму элементов через цикл</p>
+<pre>
+int result = 0;
+for (int i = l; i &lt;= r; i++) {
+  result += A[i];
+}
+</pre>
+
+  <p>Допустим запросов q штук и для каждого запроса необходимо найти сумму элементов с l до r. Наивное решение для обработки запросов очень долгое.</p>
+  <p>Более эффективное решение в случае массовых запросов использовать префикс-сумму.</p>
+  <p>Префиксная сумма - это подход, при котором предварительно вычисляются суммы элементов массива для быстрого получения суммы любого подмассива.</p>
+  <p>Создадим дополнительный массив B, который будет являться префикс-суммой. Размер массива B должен быть как минимум на один элемент больше размера массива A.</p>
+  <code>A = {a<sub>1</sub>, a<sub>2</sub>, ... , a<sub>n-1</sub>, a<sub>n</sub>}</code>
+  <code>B = {b<sub>0</sub>, b<sub>1</sub>, b<sub>2</sub>, ... , b<sub>n-1</sub>, b<sub>n</sub>}</code>
+  <p>Каждый элемент массива B хранит в себе сумму элементов массива A</p>
+  <code>b<sub>0</sub> = 0</code>
+  <code>b<sub>1</sub> = a<sub>1</sub></code>
+  <code>b<sub>2</sub> = a<sub>1</sub> + a<sub>2</sub></code>
+  <code>...</code>
+  <code>b<sub>n</sub> = a<sub>1</sub> + ... + a<sub>n</sub></code>
+
+  <p>Для использования массива B необходимо решить две задачи</p>
+  <ol>
+    <li>Уметь быстро создавать массив префикс-сумму</li>
+    <li>Уметь быстро отвечать на запрос суммы элементов с l до r</li>
+  </ol>
+  <p>Для начала научимся собирать массив B.</p>
+  <code>b<sub>i</sub> = a<sub>1</sub> + a<sub>2</sub> + ... + a<sub>i</sub></code>
+  <code>b<sub>i+1</sub> = a<sub>1</sub> + a<sub>2</sub> + ... + a<sub>i</sub> + a<sub>i+1</sub></code>
+  <p>Заметим, что b<sub>i</sub> отличается от b<sub>i+1</sub> на один элемента a<sub>i+1</sub>. Мы можем представить b<sub>i+1</sub> в более коротком виде</p>
+  <code>b<sub>i+1</sub> = b<sub>i</sub> + a<sub>i+1</sub></code>
+
+  <details>
+    <summary>Код префикс-суммы</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;
+  cin >> n;
+  vector&lt;int&gt; A(n);
+  for (int i = 0; i &lt; n; i++) {
+    cin >> A[i];
+  }
+
+  // решение
+  vector&lt;int&gt; B(n + 1);
+  for (int i = 0; i &lt; n; i++) {
+    B[i + 1] = B[i] + A[i];
+  }
+
+  // вывод результата
+  for (int i = 0; i &lt;= n; i++) {
+    cout &lt;&lt; B[i] &lt;&lt; " ";
+  }
+}
+</pre>
+  </details>
+
+  <p>Научимся использовать префикс-сумму для быстрого ответа на запросы.</p>
+  <p>Мы можем изменить представление запроса по задаче в следующий вид, добавим и вычтем несколько элементов</p>
+  <code>result = a<sub>l</sub> + a<sub>r</sub></code>
+  <code>result = (a<sub>1</sub> + .. + a<sub>l-1</sub>) + a<sub>l</sub> + a<sub>r</sub> - (a<sub>1</sub> + .. + a<sub>l-1</sub>)</code>
+  <code>result = b<sub>r</sub> - b<sub>l-1</sub></code>
+
+  <p>Ограничения для использования алгоритма префикс-функции:</p>
+  <ol>
+    <li>Функция, на которой собирается дополнительный массив, должна быть обратимой. Например, мы можем собирать на следующих операциях: сложение (вычитание), умножение (деление), xor (xor). Но не можем использовать операции max и min.</li>
+    <li>Исходный массив не должени меняться. Изменение одного элемента исходного массива влечет к изменению большого количества элементов в массиве префикс-функции</li>
+  </ol>
+
+  <h4>Входные данные</h4>
+  <p>В первой строке единственное целое число n (1 &le; 10<sup>5</sup>) - размер массива A</p>
+  <p>Во второй строке n целых чисел</p>
+  <p>В третьей строке единственное целое число q (1 &le; 10<sup>5</sup>) - число запросов</p>
+  <p>В следующих q строках по два числа l и r для подсчета суммы подмассивов</p>
+
+  <h4>Выходные данные</h4>
+  <p>q целых чисел, ответы на q запросов</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;
+  cin >> n;
+  vector&lt;int&gt; A(n);
+  for (int i = 0; i &lt; n; i++) {
+    cin >> A[i];
+  }
+
+  // решение
+  vector&lt;int&gt; B(n + 1);
+  for (int i = 0; i &lt; n; i++) {
+    B[i + 1] = B[i] + A[i];
+  }
+
+  int q;
+  cin >> q;
+  for (int i = 0; i &lt; q; i++) {
+    int l, r;
+    cin >> l >> r;
+    int result;
+    result = B[r] - B[l-1];
+
+    // вывод результата
+    cout &lt;&lt; result &lt;&lt; "\n";
+  }
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача 2. Найти сумму в матрице -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>Задача 2. Найти сумму в матрице</h3>
+
+  <p>Для усложнения префикс-функции решим задачу на поиск суммы в матрице</p>
+  <p>Пусть у нас есть матрица n x m. Матрица прямоугольная. Необходимо найти сумму элементов в любом прямоугольнике матрицы</p>
+<pre>
+a<sub>11</sub> a<sub>12</sub> ... a<sub>1m</sub>
+a<sub>21</sub> a<sub>22</sub> ... a<sub>2m</sub>
+...
+a<sub>n1</sub> a<sub>n2</sub> ... a<sub>nm</sub>
+</pre>
+  <p>Для одномерного массива для хранения префикс-сумм мы создавали дополнительный одномерный массив. Дополнительный одномерный массив на один элемент больше исходного массива. Для матрицы для хранения префикс-сумм мы создадим дополнительную матрицу. Дополнительная матрица на одну строку и на один столбец больше исходной матрицы.</p>
+<pre>
+b<sub>00</sub> b<sub>01</sub> b<sub>02</sub> ... b<sub>0m</sub>
+b<sub>10</sub> b<sub>11</sub> b<sub>12</sub> ... b<sub>1m</sub>
+b<sub>20</sub> b<sub>21</sub> b<sub>22</sub> ... b<sub>2m</sub>
+...
+b<sub>n0</sub> b<sub>n1</sub> b<sub>n2</sub> ... b<sub>nm</sub>
+</pre>
+
+  <p>В дополнительном массиве каждый элемент b<sub>i</sub> хранит сумму элементов исходного массива от a<sub>1</sub> до a<sub>i</sub>.</p>
+  <code>b<sub>i</sub> = a<sub>1</sub> + a<sub>2</sub> + ... + a<sub>i</sub></code>
+  <p>В дополнительной матрице каждый элемент b<sub>ij</sub> хранит сумму элементов в прямоугольнике от a<sub>11</sub> до a<sub>ij</sub></p>
+  <code>b<sub>ij</sub> = a<sub>11</sub> + ... + a<sub>1j</sub> + ... + a<sub>i1</sub> + ... + a<sub>ij</sub></code>
+
+  <p>Пусть нам надо посчитать сумму элементов в прямоугольнике от a<sub>22</sub> до a<sub>33</sub>.</p>
+  <code>result = b<sub>33</sub> - b<sub>31</sub> - b<sub>13</sub> + b<sub>11</sub></code>
+  <p>Это формула "включения - выключения". Ее можно продолжить для трехмерного массива, если требуется такое углубление.</p>
+
+  <h4>Входные данные</h4>
+  <p>В первой строке два числа n и m - размер матрицы</p>
+  <p>В следующих n строк по m чисел - сама матрица</p>
+  <p>В следующей строке одно число q - количество запросов</p>
+  <p>В следующих q строках по 4 числа xl, xr, yl, yr - координаты прямоугольника в котором надо посчитать сумму</p>
+
+  <h4>Пример</h4>
+<pre>
+4 4
+1 2 3 4
+5 6 7 8
+5 6 7 8
+1 2 3 4
+2
+1 2 1 2
+3 4 3 4
+</pre>
+<pre>
+14
+22
+</pre>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n, m;
+  cin >> n >> m;
+  vector&lt;vector&lt;int&gt; &gt; A(n + 1, vector&lt;int>(m + 1));
+  for (int i = 1; i &lt;= n; i++) {
+    for (int j = 1; j &lt;= m; j++) {
+      cin >> A[i][j];
+    }
+  }
+
+  // создадим префикс-матрицу
+  vector&lt;vector&lt;long long&gt; &gt; B(n + 1, vector&lt;long long&gt;(m + 1));
+  for (int i = 1; i &lt;= n; i++) {
+    for (int j = 1; j &lt;= m; j++) {
+      B[i][j] = B[i][j - 1] + A[i][j];
+    }
+  }
+  for (int i = 1; i &lt;= n; i++) {
+    for (int j = 1; j &lt;= m; j++) {
+      B[i][j] += B[i-1][j];
+    }
+  }
+  int q, xl, xr, yl, yr;
+  long long result;
+  cin >> q;
+  for (int i = 0; i &lt; q; i++) {
+    cin >> xl >> xr >> yl >> yr;
+    result = B[xr][yr] - B[xl - 1][yr] - B[xr][yl - 1] + B[xl - 1][yl - 1];
+
+    //вывод результата
+    cout &lt;&lt; result &lt;&lt; '\n';
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -255,6 +502,77 @@
 2
 0
 </pre>
+
+  <details>
+    <summary>Наивное решение - цикл в цикле</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  string s;
+  cin >> s;
+  int m;
+  cin >> m;
+  int l, r;
+  for (int i = 0; i &lt; m; i++) {
+    cin >> l >> r;
+
+    // решение
+    l--;
+    r--;
+    int result = 0;
+    for (int j = l; j &lt; r; j++) {
+      if (s[j] == s[j + 1]) {
+        result++;
+      }
+    }
+
+    // вывод результата
+    cout &lt;&lt; result &lt;&lt; "\n";
+  }
+}
+</pre>
+  </details>
+
+  <details>
+    <summary>Решение - префикс-функция</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  string s;
+  cin >> s;
+
+  // создадим префикс-функцию
+  vector<int> Pref(s.size());
+  for (int i = 1; i &lt; s.size(); i++) {
+    Pref[i] = Pref[i - 1];
+    if (s[i] == s[i - 1]) {
+      Pref[i]++;
+    }
+  }
+
+  int m;
+  cin >> m;
+  int l, r;
+  for (int i = 0; i &lt; m; i++) {
+    cin >> l >> r;
+
+    // решение и вывод результата
+    l--;
+    r--;
+    cout &lt;&lt; Pref[r] - Pref[l] &lt;&lt; "\n";
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -592,7 +910,7 @@
 
   <p>Следующие m строк описывают квесты. В j-й из них содержатся два целых числа s<sub>j</sub> и t<sub>j</sub> (1≤s<sub>j</sub>,t<sub>j</sub>≤n;s<sub>j</sub>≠t<sub>j</sub>), которые значат, что вам необходимо переместиться из столбца s<sub>j</sub> в столбец tj в течение j-го квеста.</p>
 
-  <p>Заметьте, что s<sub>j</sub> может быть больше, чем t<sub></sub>.</p>
+  <p>Заметьте, что s<sub>j</sub> может быть больше, чем t<sub>j</sub>.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите m строк. В j-й из них должно находиться минимальное количество урона от падения, который вы можете получить во время выполнения j-го квеста.</p>
@@ -616,6 +934,52 @@
 3
 1
 </pre>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Создадим массив A для входных данных, массив B для префикс-сумм слева направо, массив C для префикс-сумм справа налево.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n, m;
+  cin >> n >> m;
+  vector&lt;long long&gt; A(n + 2), B(n + 2), C(n + 2);
+  for (int i = 1; i &lt;= n; i++) {
+    cin >> A[i];
+  }
+
+  // решение
+  for (int i = 2; i &lt;= n; i++) {
+    B[i] = B[i - 1];
+    if (A[i] < A[i - 1]) {
+      B[i] += A[i - 1] - A[i];
+    }
+  }
+  for (int i = n - 1; i >= 0; i--) {
+    C[i] = C[i + 1];
+    if (A[i] &lt; A[i + 1]) {
+      C[i] += A[i + 1] - A[i];
+    }
+  }
+  for (int i = 0; i &lt; m; i++) {
+    int l, r;
+    cin >> l >> r;
+
+    //вывод результата
+    if (l &lt;= r) {
+      cout &lt;&lt; B[r] - B[l] &lt;&lt; '\n';
+    } else {
+      cout &lt;&lt; C[r] - C[l] &lt;&lt; '\n';
+    }
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -687,7 +1051,7 @@
   <p>Первая строка входного файла содержит два целых числа n и k – число верстовых столбов и запросов соответственно. Вторая строка содержит n целых чисел, разделенных пробелами – цвета столбов 1,2,…n. Последующие k строк содержат запросы – по одному запросу на строку. i-тый запрос состоит двух целых чисел l<sub>i</sub> и r<sub>i</sub>, указывающих границы интервала, количество различных цветов на котором необходимо подсчитать.</p>
 
   <p>Ограничения:</p>
-  <code>1≤n≤10000; 1≤m≤255; 1≤li≤ri≤n; 1≤k≤100000.</code>
+  <code>1≤n≤10000; 1≤m≤255; 1≤l<sub>i</sub>≤r<sub>i</sub>≤n; 1≤k≤100000.</code>
 
   <h4>Выходные данные</h4>
   <p>Выходной файл дожжен содержать k строчек. Первая строка содержит число различных цветов на интервале l<sub>1</sub>…r<sub>1</sub>; вторая – число различных цветов на интервале l<sub>2</sub>…r<sub>2</sub> и так далее</p>
