--- a/src/components/header/social-icons/elem-social-icons.html
+++ b/src/components/header/social-icons/elem-social-icons.html
@@ -1,18 +1,20 @@
 
 <div class="social" id="social">
-  <a class="social__icon social__icon_dc" href="https://discord.com/channels/@me" title="Discord" target="_blank"></a>
-
   <a class="social__icon social__icon_vk" href="https://vk.com/benchpress250" title="ВКонтакте" target="_blank"></a>
 
   <a class="social__icon social__icon_wa" href="https://wa.me/79507658158") title="WhatsApp" target="_blank"></a>
 
   <a class="social__icon social__icon_tg" href="https://t.me/Frontend200tb" title="Telegram" target="_blank"></a>
 
+  <a class="social__icon social__icon_dc" href="https://discord.com/channels/@me" title="Discord" target="_blank"></a>
+
   <a class="social__icon social__icon_github" href="https://github.com/frontend200tb" title="GitHub" target="_blank"></a>
 
-  <a class="social__icon social__icon_cp" href="https://codepen.io/ivan200tb/" title="Codepen" target="_blank"></a>
-
   <a class="social__icon social__icon_cw" href="https://www.codewars.com/users/frontend200tb" title="Codewars" target="_blank"></a>
+
+  <a class="social__icon social__icon_cf" href="https://codeforces.com/profile/frontend200tb" title="Codeforces" target="_blank"></a>
+
+  <a class="social__icon social__icon_cp" href="https://codepen.io/ivan200tb/" title="Codepen" target="_blank"></a>
 
   <a class="social__icon social__icon_replit" href="https://replit.com/@frontend200tb" title="Repl.it" target="_blank"></a>
 
