--- a/src/components/alg/alg-conspect/fatin/pages/elem-fatin-21.html
+++ b/src/components/alg/alg-conspect/fatin/pages/elem-fatin-21.html
@@ -18,6 +18,8 @@
   <p><a href="#p1">Введение</a></p>
   <p><a href="#p2">Паттерны бинарного поиска</a></p>
   <p><a href="#task1">Задача 1. Извлечение корня</a></p>
+  <p><a href="#task2">Задача 2. Последнее вхождение числа в массиве</a></p>
+  <p><a href="#task3">Задача 3. Первое вхождение числа в массиве</a></p>
 </article>
 
 
@@ -272,6 +274,46 @@ class Solution:
   </details>
 
   <p>Если на собесе вас спросят "почему тут можно использовать бинарный поиск?" и вы ответите "массив отсортирован", то лекция прошла зря...</p>
+  <p><strong>Бинарный поиск</strong> применяется только в тех задачах, где можно элементы разделить на две непрерывные последовательности из хороших и плохих элементов. Для разделения на две последовательности надо написать функцию <strong>good</strong>, которая провряет элемент хороший он или плохой. Возможны два случая.</p>
+  <p>Первый случай. Сначала идут все хорошие элементы, потом все плохие. <strong>Результатом бинарного поиска</strong> будут <strong>последний хороший элемент</strong> и <strong>первый плохой элемент</strong></p>
+  <p>Второй случай. Сначала идут все плохие элементы, потом все хорошие. <strong>Результатом бинарного поиска</strong> будут <strong>последний плохой элемент</strong> и <strong>первый хороший элемент</strong></p>
+
+  <p>Бинарный поиск выполняется в 4 этапа</p>
+  <ol>
+    <li>Определить диапазон допустимых значений. В каком диапазоне может находиться результат. Например, диапазон от 0 до n</li>
+    <li>Написать функцию <strong>good</strong>, которая разделит весь диапазон на хорошие и плохие элементы. Принимает элемент и возвращает true или false. Будет ошибкой если в ней будут участвовать указатели l и r.</li>
+    <li>Определить в каком указателе будет ответ - в левом или в правом. Если сначала идут все хорошие элементы, а потом все плохие, то ответ будет в левом указателе. Если сначала идут все плохие элементы, а потом все хорошие, то ответ будет в правом указателе.</li>
+    <li>Правильно поставить два указателя в самом начале. Если ответ в левом указателе, то в самом начале левый указатель ставим на 0, а правый на n + 1 за границы допустимых значений. Если ответ в правом указателе, то правый указатель ставим на n, а левый на -1 за границы допустимых значений.</li>
+  </ol>
+  <p>Потом выполняется алгоритм, который одинаковый для всех задач на бинарный поиск. Нужно написать всего один цикл while</p>
+  <ol>
+    <li>
+      <p>Условие выхода из цикла - когда <strong>два указателя стали рядом</strong>. Не заходит один за другой и не равны друг другу, а стоят на соседних элементах. Даже если входные данные состоят из двух элементов, в самом начале указатели не должны стоять рядом, один из них должен быть за границей допустимых значений.</p>
+      <code>while (r - l > 1)</code>
+    </li>
+    <li>
+      <p>Первой строчкой в цикле вычисляем средний элемент. Для небольших чисел подойдет простая формула</p>
+      <code>m = (l + r) / 2</code>
+      <p>Если числа большие, то l + r может дать переполнение. Поэтому используем формулу посложнее</p>
+      <code>m = l + (r - l) / 2</code>
+    </li>
+    <li>
+      <p>Проверяем средний элемент функцией good. Хороший он или плохой. Если средний элемент окажется true, то слева от него все элементы тоже true, ставим левый указатель на него</p>
+      <code>if (good(m)) {l = m}</code>
+      <p>Если средний элемент окажется false, то справа от него все элементы тоже false, ставим правый указатель на него.</p>
+      <code>else {r = m}</code>
+    </li>
+    <li>Когда выйдем из цикла, ответ будет лежать в том указателе, который указывал на true. Если требовалось найти точное совпадение с каким либо числом, то проверяем элемент на совпадение с этим числом. Если не совпал, то такого элемента в массиве нет.</li>
+  </ol>
+</p>
+
+  <h4>Алгоритм решения бинарным поиском</h4>
+  <ol>
+    <li>Для нескольких примеров выбрать элемент, который мы будем искать</li>
+    <li>Определить в каком указателе ответ (левый или правый) и поставить указатели в начальную позицию</li>
+    <li>Придумать функцию <strong>good</strong> которая подойдет для всех примеров</li>
+    <li>Написать код</li>
+  </ol>
 </article>
 
 
@@ -295,28 +337,233 @@ class Solution:
   <code>x = 9</code>
   <code>3</code>
 
-  <p>Разберем пример 2. Дано число <strong>x = 8</strong>, найти число <strong>y</strong> равное корню из 8 округленному вниз до ближайшего целого. Число <strong>y</strong> будет лежать в промежутке от 0 до 8:</p>
-  <code>[0, 1, 2, 3, 4, 5, 6, 7, 8]</code>
-  <p>Будем начиная с 0 по очереди все числа возводить в квадрат:</p>
-  <code>[0, 1, 4, 9, 16, 25, 36, 49, 64]</code>
-  <p>Будем считать число <strong>y</strong> хорошим если <strong>y<sup>2</sup> &le; 8</strong>. Заменим хорошие числа на true, а плохие на false:</p>
-  <code>[true, true, true, false, false, false, false, false, false]</code>
-  <p><strong>Бинарный поиск</strong> применяется только в тех задачах, где можно элементы разделить на две непрерывные последовательности из хороших и плохих элементов. <strong>Результатом бинарного поиска</strong> должны быть <strong>последний хороший элемент</strong> и <strong>первый плохой элемент</strong></p>
-
-  <p>Бинарный поиск выполняется в три этапа</p>
+  <p>Разберем пример 2. Дано число <strong>x = 8</strong>, найти число <strong>y</strong> равное корню из 8 округленному вниз до ближайшего целого.</p>
   <ol>
-    <li>Правильно поставить два указателя в самом начале. Для этого нужно понять диапазон допустимых значений. В каком диапазоне может находиться результат. Например, результат корня из x может быть в диапазоне от 0 до x.</li>
-    <li>Правильно определить в каком указателе будет ответ - в левом или в правом. Если ответ в левом указателе, то в самом начале левый указатель ставим на 0, а правый на x + 1 за границы допустимых значений. Если ответ в правом указателе, то правый указатель ставим на x, а левый на -1 за границы допустимых значений.</li>
-    <li>Условие остановки в бинарном поиске - когда <strong>два указателя стали рядом</strong>. Не заходит один за другой и не равны друг другу, а стоят на соседних элементах. Даже если ответ будет один из двух элементов, в самом начале указатели не должны стоять рядом, один из них должен быть за границей допустимых значений.</li>
+    <li>
+      <p>Результат корня из x может быть в диапазоне от 0 до x. Число <strong>y</strong> будет лежать в промежутке от 0 до 8:</p>
+      <code>[0, 1, 2, 3, 4, 5, 6, 7, 8]</code>
+    </li>
+    <li>
+      <p>Функция <strong>good</strong> это возведение в квадрат.Будем начиная с 0 по очереди все числа возводить в квадрат:</p>
+      <code>[0, 1, 4, 9, 16, 25, 36, 49, 64]</code>
+      <p>Будем считать число <strong>y</strong> хорошим если <strong>y<sup>2</sup> &le; 8</strong>. Заменим хорошие числа на true, а плохие на false:</p>
+      <code>[true, true, true, false, false, false, false, false, false]</code>
+    </li>
+    <li>Сначала идут все хорошие элементы, потом все плохие. Поэтому ответ будет в левом указателе.</li>
+    <li>Ответ будет в левом указателе. Поэтому ставим левый указатель на 0, а правый на x + 1 за границы допустимых значений</li>
   </ol>
-  <h4></h4>
-  <p>Алгоритм движения указателей один для всех задач на бинарный поиск. Делим весь диапазон элементов пополам и находим средний элемент.</p>
-  <code>m = (l + r) / 2</code>
-  <p>Проверим его. Если средний элемент окажется false, то справа от него все элементы тоже false, ставим правый указатель на него.</p>
-  <code>r = m</code>
-  <p>Если средний элемент окажется true, то слева от него все элементы тоже true, ставим левый указатель на него</p>
-  <code>l = m</code>
+
+
   <p>Сложность по времени O(log(N))</p>
   <p>Сложность по памяти O(1)</p>
+
+  <details>
+    <summary>Код на python</summary>
+<pre>
+from typing import *
+
+def find_sqrt(x: int) -> int:
+  l, r = 0, x + 1
+  while r - l > 1:
+    m = (l + r) // 2
+    if m * m &lt;= x:
+      l = m
+    else:
+      r = m
+
+  return l
+</pre>
+  </details>
+
+  <details>
+    <summary>Код на java</summary>
+<pre>
+public class Solution {
+  public int findSqrt(int x) {
+    int l = 0;
+    long r = (long) x + 1;
+    while (r - l > 1) {
+      long m = (l + r) / 2
+      if (m * m &lt;= x) {
+        l = (int) m;
+      } else {
+        r = m;
+      }
+    }
+
+    return l;
+  }
+}
+</pre>
+  </details>
+
+  <details>
+    <summary>Код на go</summary>
+<pre>
+package main
+
+func findSqrt(x int) int {
+  l, r := 0, x + 1
+  for r - l > 1 {
+    m := (l + r) / 2
+    if m * m &lt;= x {
+      l = m
+    } else {
+      r = m
+    }
+  }
+
+  return l
+}
+</pre>
+  </details>
+
+  <details>
+    <summary>Код на C++</summary>
+<pre>
+using namespace std;
+
+int findSqrt(int x) {
+  auto good = [&](long long int i) {
+    return i * i &lt;= x;
+  };
+  long long int l = 0;
+  long long int r = static_cast&lt;long long int&gt;(x) + 1;
+  while (r - l > 1) {
+    long long int m = (l + r) / 2
+    if (good(m)) {
+      l = m;
+    } else {
+      r = m;
+  }
+
+  return static_cast&lt;int&gt;(l);
+}
+</pre>
+  </details>
+
+  <details>
+    <summary>Код на javascript</summary>
+<pre>
+function findSqrt(x) {
+  let l = 0;
+  let r = x + 1;
+  while (r - l > 1) {
+    const m = Math.floor((l + r) / 2);
+    if (m * m &lt;= x) {
+      l = m;
+    } else {
+      r = m;
+    }
+  }
+
+  return l;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача 2. Последнее вхождение числа в массиве -->
+<article class="article">
+  <div class="anchor" id="task2"></div>
+  <h3>Задача 2. Последнее вхождение числа в массиве</h3>
+
+  <p>Задача с собеседования в Яндекс, Сбер, Озон</p>
+  <p>Дан массив <strong>nums</strong>, отсортированный в неубывающем порядке и число <strong>x</strong>. Нужно вернуть позицию последнего вхождения числа <strong>x</strong> в массив <strong>nums</strong>, или вернуть -1 если такого числа нет.</p>
+
+  <h4>Пример 1</h4>
+  <code>nums = [1,4,8,9,9,12], x = 9</code>
+  <code>4</code>
+
+  <h4>Пример 2</h4>
+  <code>nums = [1,4,8,12], x = 9</code>
+  <code>-1</code>
+
+  <h4>Решение</h4>
+  <ol>
+    <li>Диапазон допустимых значений это весь массив от 0 до n - 1.</li>
+    <li>
+      <p>Какие элементы хорошие? Которые меньше или равны x. Напишем функцию good</p>
+      <code>return num &lt;= x</code>
+    </li>
+    <li>Сначала идут все хорошие элементы, потом все плохие. Поэтому ответ будет в левом указателе</li>
+    <li>
+      <p>Если ответ в левом указателе, то</p>
+      <code>l = 0; r = n</code>
+    </li>
+  </ol>
+  <p>Сложность по времени O(logN)</p>
+  <p>Сложность по памяти O(1)</p>
+
+  <details>
+    <summary>Код на python</summary>
+<pre>
+from typing import *
+
+def search(nums: List[int], x: int) -> int:
+  l,r = 0, len(nums)
+  while r - l > 1:
+    m = (l + r) // 2
+    if nums[m] &lt;= x:
+      l = m
+    else:
+      r = m
+
+  return l if nums[l] == x else -1
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача 3. Первое вхождение числа в массиве -->
+<article class="article">
+  <div class="anchor" id="task3"></div>
+  <h3>Задача 3. Первое вхождение числа в массиве</h3>
+
+  <p>Задача с собеседования в Яндекс, Сбер, Озон</p>
+  <p>Дан массив <strong>nums</strong>, отсортированный в неубывающем порядке и число <strong>x</strong>. Нужно вернуть позицию первого вхождения числа <strong>x</strong> в массив <strong>nums</strong>, или вернуть -1 если такого числа нет.</p>
+
+  <h4>Пример 1</h4>
+  <code>nums = [4,5,6,6,8,12,15,20], x = 6</code>
+  <code>2</code>
+
+  <h4>Пример 2</h4>
+  <code>nums = [1,4,8,12], x = 6</code>
+  <code>-1</code>
+
+  <h4>Решение</h4>
+  <ol>
+    <li>Диапазон допустимых значений это весь массив от 0 до n - 1.</li>
+    <li>
+      <p>Какие элементы хорошие? Которые больше или равны x. Напишем функцию good</p>
+      <code>return num &lt; x</code>
+    </li>
+    <li>Сначала идут все плохие элементы, потом все хорошие. Поэтому ответ будет в правом указателе</li>
+    <li>
+      <p>Если ответ в правом указателе, то</p>
+      <code>l = -1; r = n - 1</code>
+    </li>
+  </ol>
+  <p>Сложность по времени O(logN)</p>
+  <p>Сложность по памяти O(1)</p>
+
+  <details>
+    <summary>Код на python</summary>
+<pre>
+from typing import *
+
+def search(nums: List[int], x: int) -> int:
+  l,r = -1, len(nums) - 1
+  while r - l > 1:
+    m = (l + r) // 2
+    if nums[m] &lt; x:
+      l = m
+    else:
+      r = m
+
+  return r if nums[r] == x else -1
+</pre>
+  </details>
 </article>
 
