--- a/src/components/alg/alg-conspect/sp/pages/elem-sp2.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp2.html
@@ -1183,7 +1183,7 @@ int main() {
   <p>Ваня хочет узнать, пирамиду какой максимальной высоты он может создать с использованием имеющихся кубиков.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке записано целое число n (1 ≤ n ≤ 104) — количество кубиков, подаренных Ване.</p>
+  <p>В первой строке записано целое число n (1 ≤ n ≤ 10<sup>4</sup>) — количество кубиков, подаренных Ване.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите единственной строкой максимально возможную высоту пирамиды.</p>
@@ -1198,6 +1198,34 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;   // число кубиков
+  cin >> n;
+
+  // решение
+  int h = 0;    // высота пирамиды
+  int i = 0;    // текущий кубик
+  int need = 0; // нужно кубиков всего
+  int level = 0; // кубиков на текущем уровне
+  while (need &lt;= n) {
+    i++;
+    level = level + i;
+    need = need + level;
+    if (need &lt;= n) {
+      h++;
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; h;
+}
+</pre>
   </details>
 </article>
 
