--- a/src/components/alg/alg-conspect/sp/pages/elem-sp1.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp1.html
@@ -254,7 +254,7 @@ int main() {
   <p>Заданы два целых числа a и b. Выведите a+b</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке записано целое число t (1≤t≤104) — количество наборов входных данных в тесте. Далее следуют t наборов входных данных. Каждый набор задан одной строкой, которая содержит два целых числа a, b (-1000≤a,b≤1000).</p>
+  <p>В первой строке записано целое число t (1≤t≤10<sup>4</sup>) — количество наборов входных данных в тесте. Далее следуют t наборов входных данных. Каждый набор задан одной строкой, которая содержит два целых числа a, b (-1000≤a,b≤1000).</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите t целых чисел — искомые суммы a+b для каждого набора входных данных.</p>
@@ -520,7 +520,7 @@ int main() {
   <p>Вам даны цвета домашней и выездной формы каждой команды. Для удобства эти цвета пронумерованы целыми числами таким образом, что никакие два разных цвета не имеют одинаковый номер. Помогите Манао найти ответ на его вопрос.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке содержится целое число n (2≤n≤30). В каждой из следующих n строк записана пара разделенных одним пробелом различных целых чисел hi, ai (1≤hi, ai≤100) — номер цвета домашней и выездной форм i-ой команды соответственно.</p>
+  <p>В первой строке содержится целое число n (2≤n≤30). В каждой из следующих n строк записана пара разделенных одним пробелом различных целых чисел h<sub>i</sub>, a<sub>i</sub> (1≤h<sub>i</sub>, a<sub>i</sub>≤100) — номер цвета домашней и выездной форм i-ой команды соответственно.</p>
 
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите количество матчей, в которых домашняя команда выступит в выездной форме.</p>
