--- a/src/components/alg/alg-conspect/sp/pages/elem-sp8.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp8.html
@@ -444,6 +444,53 @@ int main() {
 1 5 774
 </pre>
   <code>751 751 751 1148 1171</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Изначально массив a<sub>1</sub> a<sub>2</sub> ... a<sub>n</sub> заполнен нулями. Приходит запрос: к каждому элементу с a<sub>5</sub> до a<sub>10</sub> прибавить число 2. Это будет долго. Попробуем это сделать быстрее.</p>
+    <p>Создадим префиксный массив (массив обновлений) b<sub>1</sub> b<sub>2</sub> ... b<sub>n</sub> b<sub>n+1</sub>. Прибавим значение 2 к элементу b<sub>5</sub>. Это означает, что начиная с a<sub>5</sub> до a<sub>n</sub> все элементы увеличились на 2.</p>
+    <p>Чтобы элементы увеличились только на интервале от a<sub>5</sub> до a<sub>10</sub> нужно из b<sub>11</sub> вычесть 2. Это означает что все элементы от a<sub>11</sub> до a<sub>n</sub> уменьшатся на 2. В итоге +2 -2 = 0, поэтому элементы от a<sub>11</sub> до a<sub>n</sub> не изменят свое значение</p>
+    <p>Таким образом, если к b<sub>5</sub> добавить 2, а из b<sub>11</sub> вычесть 2, то все элементы на отрезке [a<sub>5</sub>, a<sub>10</sub>] увеличатся на 2</p>
+    <p>Чтобы такое решение было возможно, должно выполнится три условия</p>
+    <ol>
+      <li>Действие должно быть обратимо. Сложение и вычитание это обратимые действия</li>
+      <li>Начальный массив должен быть неизменным</li>
+      <li>Результат запрашивать только в самом конце</li>
+    </ol>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n, m;
+  cin >> n >> m;
+  // создадим массив с нулями
+  vector&lt;long long&gt; Ans(n + 10);
+  // создадим префикс-функцию
+  vector&lt;long long&gt; Pref(n + 10);
+  long long l, r, c;
+  for (int i = 0; i &lt; m; i++) {
+    cin >> l >> r >> c;
+    // все запросы кладем в префикс-функцию
+    Pref[l] += c;
+    Pref[r + 1] -= c;
+  }
+
+  // соберем результат
+  for (int i = 1; i &lt; Ans.size(); i++) {
+    Ans[i] = Ans[i - 1] + Pref[i];
+  }
+
+  //вывод результата
+  for (int i = 1; i &lt;= n; i++) {
+    cout &lt;&lt; Ans[i] &lt;&lt; " ";
+  }
+}
+</pre>
+  </details>
 </article>
 
 
@@ -652,6 +699,63 @@ int main() {
 ....***.**....*
 </pre>
   <code>...********..**</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Для каждого сектора, представленного точкой, посчитать количество секторов слева и справа до битого сектора, представленного звездочкой. Для хранения этой информации создадим два вспомогательных массива. Один для хранения расстояний слева, другой для хранения расстояний справа</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n, k;
+  cin >> n >> k;
+  string s;
+  cin >> s;
+  // добавим бордюр чтобы не делать
+  // дополнительные проверки
+  s = '.' + s + '.';
+
+  // решение
+  // создадим префикс-функцию
+  vector&lt;int&gt; PrefL(n + 2);
+  vector&lt;int&gt; PrefR(n + 2);
+  // через сколько дней битый сектор
+  // дойдет до текущего сектора
+  int day = 1000000;
+
+  for (int i = 1; i &lt;= n; i++) {
+    if (s[i] == '*') {
+      day = 0;
+    } else {
+      day++;
+    }
+    PrefL[i] = day;
+  }
+  day = 1000000;
+  for (int i = n; i >= 1; i--) {
+    if (s[i] == '*') {
+      day = 0;
+    } else {
+      day++;
+    }
+    PrefR[i] = day;
+  }
+
+  //вывод результата
+  for (int i = 1; i &lt;= n; i++) {
+    if (min(PrefL[i], PrefR[i]) &lt;= k) {
+      cout &lt;&lt; '*';
+    } else {
+      cout &lt;&lt; '.';
+    }
+  }
+}
+</pre>
+  </details>
 </article>
 
 
