--- a/src/components/alg/alg-conspect/sp/pages/elem-sp9.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp9.html
@@ -14,6 +14,8 @@
   <h2>Содержание</h2>
 
   <p><a href="#p1">Два указателя</a></p>
+  <p><a href="#t1">Задача 1. Слияние</a></p>
+  <p><a href="#t2">Задача 2. Поддержка отрезка</a></p>
   <p><a href="#task1">Задача A. Книги</a></p>
   <p><a href="#task2">Задача B. Министерство правды</a></p>
   <p><a href="#task3">Задача C. Правый минус левый</a></p>
@@ -35,11 +37,104 @@
 </article>
 
 
-<!-- Префикс-функция -->
+<!-- Два указателя -->
 <article class="article">
   <div class="anchor" id="p1"></div>
-  <h3>Префикс-функция</h3>
+  <h3>Два указателя</h3>
 
+  <h4>Метод двух указателей</h4>
+  <p>Метод двух указателей - выжный метод, который часто используется в спортивном программировании</p>
+  <p>Метод используется для отслеживания элементов в массиве, позиций или поддержания некоторого условия по задаче</p>
+  <p>Сам метод лучше обозначать как метод k указателей или метод конечного количества указателей</p>
+
+  <h4>Применение</h4>
+  <p>Использование метода двух указателей не заканчивается применением решений задачи слияния и поддержки хороших отрезков. Приведем еще несколько способов применения алгоритма</p>
+  <ol>
+    <li>Движение двух указателей в одном направлении на массиве с фиксированным шагом</li>
+    <li>Движение двух указателей друг к другу с концов массива</li>
+    <li>Подсчет величин на хороших отрезках</li>
+    <li>Нахождение отрезка с наименьшим разбросом элементов</li>
+    <li>Подсчет хороших отрезков</li>
+  </ol>
+</article>
+
+
+<!-- Задача 1. Слияние -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>Задача 1. Слияние</h3>
+
+  <p>Даны два отсортированных массива, необходимо объединить их в один отсортированный массив</p>
+  <p>Наивное решение: объединить два массива в один и отсортировать. Сложность по времени O(NlogN)</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Решим эту задачу поэтапно.</p>
+    <p>Для начала определим какой элемент должен быть в позициии C[0]. Поскольу массивы A и B отсортированны, то наименьший элемент из A[0] и B[0] должен быть перенесен в C[0].</p>
+    <p>Для определения какой элемент должен быть в C[1] мы будем выбирать из двух текущих минимальных оставшихся элементов массива A и B.</p>
+    <p>Процесс выбора будет повторяться до тех пор, пока один из массивов A, B полностью не будет перенесен в массив C.</p>
+    <p>Создадим 3 указателя, которые будут хранить индексы и указывать на элементы массивов A, B, C. Мы будем сдвигать указатели в массивах для отслеживания необходимых нам элементов.</p>
+    <p>Сложность O(n)</p>
+<pre>
+int u1 = 0, u2 = 0, u3 = 0;
+
+while (u1 &lt; A.size() && u2 &lt; B.size()) {
+  if (A[u1] &lt; B[u2]) {
+    C[u3] = A[u1];
+    u1++;
+    u3++;
+  } else {
+    C[u3] = B[u2];
+    u2++;
+    u3++;
+  }
+}
+
+while (u1 &lt; A.size()) {
+  c[u3] = A[u1];
+  u1++;
+  u3++;
+}
+
+while (u2 &lt; B.size()) {
+  c[u3] = B[u2];
+  u2++;
+  u3++;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача 2. Поддержка отрезка -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>Задача 2. Поддержка отрезка</h3>
+
+  <p>Рассмотрим задачу о поддержании длины "хорошего" отрезка в массиве. Дан массив, определить максимальную длину "хорошего" подмассива. Например, максимальный подмассив в котором нет нуле.</p>
+  <p>Наивное решение этой задачи является for for for, с трудоемкостью O(n<sup>3</sup>), где мы перебираем границы всех вариантов отрезков и перепроверяем условие хорошести на отрезке</p>
+
+  <details>
+    <summary>Решение за O(n<sup>3</sup>)</summary>
+<pre>
+int max_size = 0;
+bool flag = true;
+for (int i = 0; i &lt; n; i++) {
+  for (int j = i; j &lt; n; j++) {
+    flag = true;
+    for (int k = i; k &lt;= j; k++) {
+      if (A[k] == 0) {
+        flag = false;
+      }
+    }
+    if (flag && max_size &lt; j - i + 1)
+    max_sie = j - i + 1;
+  }
+}
+</pre>
+  </details>
+  <p>В каждой задаче понятие "хороший" индивидуально.</p>
+  <p>Пусть у нас есть дополнительные ограничения. Если отрезок хороший, то любой его подотрезок тоже хороший. Если отрезок плохой, то любой его подотрезок либо плохой, либо хороший</p>
 </article>
 
 
@@ -58,7 +153,7 @@
   <p>Посчитайте максимальное количество книг, которое Валера сможет прочитать.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке заданы два целых числа n и t (1≤ n ≤ 10<sup>5</sup>; 1 ≤ t ≤ 10<sup>9</sup>) — количество книг и количество свободных минут у Валеры соответственно. Во второй строке задана последовательность из n целых чисел a<sub>1</sub>, a<sub>2</sub>, ..., a<sub>n</sub> (1 ≤ a<sub>i</sub> ≤ 10<sup>4</sup>), в которой число ai обозначает количество минут, которое требуется для прочтения i-ой книги.</p>
+  <p>В первой строке заданы два целых числа n и t (1≤ n ≤ 10<sup>5</sup>; 1 ≤ t ≤ 10<sup>9</sup>) — количество книг и количество свободных минут у Валеры соответственно. Во второй строке задана последовательность из n целых чисел a<sub>1</sub>, a<sub>2</sub>, ..., a<sub>n</sub> (1 ≤ a<sub>i</sub> ≤ 10<sup>4</sup>), в которой число a<sub>i</sub> обозначает количество минут, которое требуется для прочтения i-ой книги.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — максимальное количество книг, которое Валера сможет прочитать.</p>
@@ -76,6 +171,14 @@
 2 2 3
 </pre>
   <code>1</code>
+
+  <h4>Решение за O(n<sup>2</sup>)</h4>
+    <p>Начнем с первой книги. Будем добавлять книги пока время их прочтения &le; t минут. Заведем два указателя left и right. Сделаем цикл в цикле. В первом цикле проходим по left от 0 до n - 1. Во вложенном цикле проходим по right от left до n - 1 и делаем проверку накопленной суммы. Можно придумать более быстрое решение.</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>В одном цикле будем сдвигать правую границу и делать проверку. Если проверка не прошла, то сдвигаем левую границу.</p>
+  </details>
 </article>
 
 
