--- a/src/components/alg/alg-conspect/sp/pages/elem-sp2.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp2.html
@@ -806,7 +806,7 @@ int main() {
   <p>У него есть n долларов. Сколько долларов ему придется одолжить у однополчанина, чтобы купить w бананов?</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке записано три положительных целых числа k, n, w (1 ≤ k, w ≤ 1000, 0 ≤ n ≤ 109), стоимость первого банана, изначальное количество долларов у солдата и количество бананов, которые он хочет купить.</p>
+  <p>В первой строке записано три положительных целых числа k, n, w (1 ≤ k, w ≤ 1000, 0 ≤ n ≤ 10<sup>9</sup>), стоимость первого банана, изначальное количество долларов у солдата и количество бананов, которые он хочет купить.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — количество долларов, которое солдату надо одолжить у однополчанина. Если деньги одалживать не надо, выведите 0.</p>
@@ -1247,7 +1247,7 @@ int main() {
   <p>По записи в карточке помогите Василию определить, какое наименьшее количество трапез в столовой санатория он мог пропустить. Трапезы, проходящие в день приезда Василия до его приезда и трапезы, проходящие в день отъезда Василия после его отъезда, пропущенными считать не следует.</p>
 
   <h4>Входные данные</h4>
-  <p>В единственной строке входных данных содержатся три целых числа b, d и s (0 ≤ b, d, s ≤ 1018, b + d + s ≥ 1) — количество завтраков, обедов и ужинов, которые посетил Василий во время отдыха в санатории, соответственно.</p>
+  <p>В единственной строке входных данных содержатся три целых числа b, d и s (0 ≤ b, d, s ≤ 10<sup>18</sup>, b + d + s ≥ 1) — количество завтраков, обедов и ужинов, которые посетил Василий во время отдыха в санатории, соответственно.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — наименьшее возможное количество трапез, пропущенных Василием.</p>
@@ -1273,6 +1273,69 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  unsigned long long b, d, s;
+  cin >> b >> d >> s;
+
+  // решение
+  unsigned long long a1{};
+  unsigned long long a2{};
+  unsigned long long a3{};
+
+  if (b >= d && b >= s) {
+    a1 = b;
+    if (d >= s) {
+      a2 = d;
+      a3 = s;
+    } else {
+      a2 = s;
+      a3 = d;
+    }
+  } else if (d >= b && d >= s) {
+    a1 = d;
+    if (b >= s) {
+      a2 = b;
+      a3 = s;
+    } else {
+      a2 = s;
+      a3 = b;
+    }
+  } else if (s >= b && s >= d) {
+    a1 = s;
+    if (b >= d) {
+      a2 = b;
+      a3 = d;
+    } else {
+      a2 = d;
+      a3 = b;
+    }
+  }
+
+  unsigned long long num1;
+  unsigned long long num2;
+
+  if (a1 - a2 > 1) {
+    num1 = a1 - a2 - 1;
+  } else {
+    num1 = 0;
+  }
+  if (a1 - a3 > 1) {
+    num2 = a1 - a3 - 1;
+  } else {
+    num2 = 0;
+  }
+
+  // вывод результата
+  cout &lt;&lt; num1 + num2;
+}
+</pre>
   </details>
 </article>
 
@@ -1289,21 +1352,21 @@ int main() {
 
   <p>Опытным путем Поликарп установил, что псу требуется не менее k прогулок суммарно за любые два последовательных дня, чтобы чувствовать себя отлично. Например, если k = 5 и вчера Поликарп гулял с собакой 2 раза, то сегодня он должен будет погулять не менее 3-х раз.</p>
 
-  <p>Поликарп проанализировал все свои дела на ближайшие n дней вперед и составил последовательность из n целых чисел a1, a2, ..., an, где ai — количество прогулок с собакой, которые он совершит в i-й день, исполняя все свои дела во время них (например, ему надо сходить в магазин, выбросить мусор и так далее).</p>
+  <p>Поликарп проанализировал все свои дела на ближайшие n дней вперед и составил последовательность из n целых чисел a<sub>1</sub>, a<sub>2</sub>, ..., a<sub>n</sub>, где a<sub>i</sub> — количество прогулок с собакой, которые он совершит в i-й день, исполняя все свои дела во время них (например, ему надо сходить в магазин, выбросить мусор и так далее).</p>
 
   <p>Помогите Поликарпу определить наименьшее количество прогулок сверх намеченных, которые ему нужно совершить за n дней для того, чтобы Кормен чувствовал себя отлично на протяжении всех n дней. Вы можете считать, что в день до первого и в день после n-го Поликарп выгуливал Кормена ровно по k раз.</p>
 
-  <p>Напишите программу, которая найдет наименьшее количество дополнительных прогулок и соответствующее расписание — последовательность целых чисел b1, b2, ..., bn (bi ≥ ai), где bi обозначает суммарное количество прогулок в i-й день.</p>
+  <p>Напишите программу, которая найдет наименьшее количество дополнительных прогулок и соответствующее расписание — последовательность целых чисел b<sub>1</sub>, b<sub>2</sub>, ..., b<sub>n</sub> (b<sub>i</sub> ≥ a<sub>i</sub>), где b<sub>i</sub> обозначает суммарное количество прогулок в i-й день.</p>
 
   <h4>Входные данные</h4>
   <p>В первой строке входных данных записаны два целых числа n и k (1 ≤ n, k ≤ 500) — количество дней и минимальное суммарное количество прогулок Кормена за любые два подряд идущих дня.</p>
 
-  <p>Во второй строке записаны целые числа a1, a2, ..., an (0 ≤ ai ≤ 500) — количество прогулок Кормена в i-й день, которые уже запланированы Поликарпом.</p>
+  <p>Во второй строке записаны целые числа a<sub>1</sub>, a<sub>2</sub>, ..., a<sub>n</sub> (0 ≤ a<sub>i</sub> ≤ 500) — количество прогулок Кормена в i-й день, которые уже запланированы Поликарпом.</p>
 
   <h4>Выходные данные</h4>
   <p>В первую строку выведите наименьшее дополнительное количество прогулок, которые нужно совершить за n дней для того, чтобы Кормен всегда чувствовал себя отлично.</p>
 
-  <p>Во вторую строку выведите n целых чисел b1, b2, ..., bn, где bi — суммарное количество прогулок в i-й день в соответствии с найденным решением (ai ≤ bi для всех i от 1 до n). Если решений несколько, разрешается вывести любое из них.</p>
+  <p>Во вторую строку выведите n целых чисел b<sub>1</sub>, b<sub>2</sub>, ..., b<sub>n</sub>, где b<sub>i</sub> — суммарное количество прогулок в i-й день в соответствии с найденным решением (a<sub>i</sub> ≤ b<sub>i</sub> для всех i от 1 до n). Если решений несколько, разрешается вывести любое из них.</p>
 
   <h4>Пример 1</h4>
 <pre>
@@ -1337,6 +1400,47 @@ int main() {
 
   <details>
     <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;algorithm&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n, k;
+  cin >> n >> k;
+  vector&lt;int&gt; A(n);
+
+  for (int i = 0; i &lt; n; i++) {
+    cin >> A[i];
+  }
+
+  // решение
+  int day = 0;   // доп прогулка за день
+  int extra = 0; // доп прогулки за n дней
+  vector&lt;int&gt; B(n);
+  B[0] = A[0];
+  for (int i = 1; i &lt; n; i++) {
+    if (A[i] + B[i - 1] &lt; k) {
+      // если нужна прогулка в i день
+      day = k - A[i] - B[i - 1];
+      B[i] = A[i] + day;
+      extra += day;
+    } else {
+      // если не нужна прогулка в i день
+      B[i] = A[i];
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; extra &lt;&lt; '\n';
+  for (int i = 0; i &lt; n; i++) {
+    cout &lt;&lt; B[i] &lt;&lt; " ";
+  }
+}
+</pre>
   </details>
 </article>
 
@@ -1349,11 +1453,11 @@ int main() {
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
 
-  <p>Студенты Вася и Петя учатся в БГУ (Байтляндском Государственном Университете). На одной из перемен они решили перекусить и заказали пиццу. Пицца представляет собой круг некоторого радиуса. Пиццу доставили уже разрезанную на n кусков, i-й кусок представляет собой сектор с углом равным ai. Вася и Петя хотят разделить все куски на два непрерывных сектора так, чтобы разница углов этих секторов была минимальна. Углом сектора называется сумма углов всех кусков пиццы входящих в него. Обратите внимание, что один из секторов может быть пустым.</p>
+  <p>Студенты Вася и Петя учатся в БГУ (Байтляндском Государственном Университете). На одной из перемен они решили перекусить и заказали пиццу. Пицца представляет собой круг некоторого радиуса. Пиццу доставили уже разрезанную на n кусков, i-й кусок представляет собой сектор с углом равным a<sub>i</sub>. Вася и Петя хотят разделить все куски на два непрерывных сектора так, чтобы разница углов этих секторов была минимальна. Углом сектора называется сумма углов всех кусков пиццы входящих в него. Обратите внимание, что один из секторов может быть пустым.</p>
 
   <h4>Входные данные</h4>
   <p>Первая строка содержит одно целое число n (1 ≤ n ≤ 360) — количество кусков, на которые разрезана пицца.</p>
-  <p>Во второй строке записаны n целых чисел ai (1 ≤ ai ≤ 360) — углы секторов, на которые разрезана пицца. Сумма всех ai равна 360.</p>
+  <p>Во второй строке записаны n целых чисел a<sub>i</sub> (1 ≤ a<sub>i</sub> ≤ 360) — углы секторов, на которые разрезана пицца. Сумма всех a<sub>i</sub> равна 360.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число — минимально возможную разницу между углами секторов пиццы которые достанутся Васе и Пете.</p>
@@ -1389,8 +1493,71 @@ int main() {
   <code>0</code>
   <p>В четвертом тесте Вася может взять 1 и 4 куски, тогда Пете достанутся 2 и 3 куски. Ответ в этом случае равен |(170 + 10) - (30 + 150)| = 0.</p>
 
+  <h4>Пример 8</h4>
+<pre>
+5
+110 90 70 50 40
+</pre>
+  <code>40</code>
+  <p>Куски пиццы должны идти подряд, то есть быть соседними. Пицца круглая, поэтому нужно учитывать что последний кусок пиццы и первый - тоже соседние.</p>
+
   <details>
     <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;algorithm&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;
+  cin >> n;
+  vector&lt;int&gt; A(n);
+
+  for (int i = 0; i &lt; n; i++) {
+    cin >> A[i];
+  }
+
+  // решение
+  if (n == 1) {
+    cout &lt;&lt; 360;
+    return 0;
+  }
+
+  int max_sector = 0; // угол макс близкий к 180
+  int sector = 0; // угол первого сектора
+  for (int i = 0; i &lt; n; i++) {
+    if (A[i] > 180) {
+      continue;
+    }
+    sector = A[i];
+    for (int j = i + 1; j &lt;= n; j++) {
+      // начать сначала если это последний кусок
+      if (j == n) {
+        j = 0;
+      }
+      // остановка если прошли круг
+      if (j == i) {
+        break;
+      }
+      // добавлять кусок пока меншье половины круга
+      if (sector + A[j] &lt;= 180) {
+        sector += A[j];
+      } else {
+        break;
+      }
+   }
+    max_sector = max(max_sector, sector);
+  }
+  // разница между углами секторов
+  int deg = (180 - max_sector) * 2;
+
+  // вывод результата
+  cout &lt;&lt; deg;
+}
+</pre>
   </details>
 </article>
 
@@ -1405,16 +1572,16 @@ int main() {
 
   <p>Совсем скоро в Берляндии состоится парад победы над инопланетными захватчиками. К сожалению, в войне погибли все солдаты, и теперь армия состоит исключительно из новобранцев, многие из которых даже не знают, с какой ноги начинается марш. Гражданское население тоже плохо понимает, с какой ноги начинается марш, поэтому важно лишь, чтобы как можно больше солдат шли в одну ногу.</p>
 
-  <p>В параде будут принимать участие n пеших колонн, i-я из которых состоит из li солдат, начинающих марш с левой ноги, и ri солдат, начинающих марш с правой ноги.</p>
+  <p>В параде будут принимать участие n пеших колонн, i-я из которых состоит из l<sub>i</sub> солдат, начинающих марш с левой ноги, и r<sub>i</sub> солдат, начинающих марш с правой ноги.</p>
 
   <p>Красота парада вычисляется по следующей формуле: если L — это суммарное количество солдат на параде, начинающих марш с левой ноги, а R — это суммарное количество солдат на параде, начинающих марш с правой ноги, то красота будет равна |L - R|.</p>
 
-  <p>Вы можете выбрать не более чем одну колонну, и изменить с какой ноги начинают марш все солдаты данной колонны. Формально, разрешается не более одного раза выбрать какой-то индекс i и поменять местами значения li и ri.</p>
+  <p>Вы можете выбрать не более чем одну колонну, и изменить с какой ноги начинают марш все солдаты данной колонны. Формально, разрешается не более одного раза выбрать какой-то индекс i и поменять местами значения l<sub>i</sub> и r<sub>i</sub>.</p>
 
   <p>Найдите номер колонны, при смене шага в которой красота парада станет максимально возможной, или определите, что такой операцией улучшить красоту парада нельзя.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке содержится одно число n (1 ≤ n ≤ 105) — количество пеших колонн. В следующих n строках находятся пары целых чисел li и ri (1 ≤ li, ri ≤ 500) — количество солдат в i-й колонне, начинающих марш с левой и с правой ноги соответственно.</p>
+  <p>В первой строке содержится одно число n (1 ≤ n ≤ 10<sup>5</sup>) — количество пеших колонн. В следующих n строках находятся пары целых чисел l<sub>i</sub> и r<sub>i</sub> (1 ≤ l<sub>i</sub>, r<sub>i</sub> ≤ 500) — количество солдат в i-й колонне, начинающих марш с левой и с правой ноги соответственно.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число k — номер колонны, в которой следует сменить шаг, или 0, если максимальная красота уже достигнута.</p>
